--- a/lab6_HTML_CSS/lab6_Banks.html
+++ b/lab6_HTML_CSS/lab6_Banks.html
@@ -4,25 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lab 6, Jalen Banks</title>
+    <link rel="stylesheet" href="style_lab6.css">
 </head>
-<link rel="stylesheet" href="style_lab6.css">
 <body>
     <header>
-        <section class = "top_header"></section>`
-        <div>
-            <nav class = "nav_header"></nav>
-            <a href="https://www.qcc.cuny.edu" target = "_blank" rel = "noopner noreferrer"></a>
-            <img src="images/logo.jpg" alt="QCC logo"
-            class="img_logo">
-            <p>testing</p>
-        </div>
-        <div>
-            <nav>
-                <a href="http://https://www.qcc.cuny.edu/admissions/index.html" target="_blank" rel = "noopner_noreferrer"></a>
-                <a href=""></a>
+        <!-- Top Header with Logo and Top Navigation -->
+        <section class="top_header">
+            <div class="logo_section">
+                <img src="images/logo.jpg" alt="QCC logo" class="img_logo">
+            </div>
+            <nav class="nav_header">
+                <a href="https://www.qcc.cuny.edu/admissions/apply.html" target="_blank" rel="noopener noreferrer">APPLY</a>
+                <a href="https://qcc.libguides.com/libraryhome" target="_blank" rel="noopener noreferrer">LIBRARY</a>
+                <a href="https://www.qcc.cuny.edu/employment/index.html" target="_blank" rel="noopener noreferrer">EMPLOYMENT</a>
+                <a href="https://www.qcc.cuny.edu/directory/default.aspx" target="_blank" rel="noopener noreferrer">DIRECTORY</a>
             </nav>
-        </div>
-        <section class = "bottom_header"></section>
+        </section>
+        
+        <!-- Bottom Header with Main Navigation -->
+        <section class="bottom_header">
+            <nav class="nav_bottom_header">
+                <a href="https://www.qcc.cuny.edu/admissions/apply.html" target="_blank" rel="noopener noreferrer">APPLY</a>
+                <a href="https://qcc.libguides.com/libraryhome" target="_blank" rel="noopener noreferrer">LIBRARY</a>
+                <a href="https://www.qcc.cuny.edu/employment/index.html" target="_blank" rel="noopener noreferrer">EMPLOYMENT</a>
+                <a href="https://www.qcc.cuny.edu/directory/default.aspx" target="_blank" rel="noopener noreferrer">DIRECTORY</a>
+                <a href="#" target="_blank" rel="noopener noreferrer">STUDENT LIFE</a>
+            </nav>
+        </section>
     </header>
+
+    <!-- Main Content Section -->
+    <main>
+        <section class="slideshow_section">
+            <img src="images/slideshow.jpg" alt="National Hispanic Heritage Month Celebration" class="slideshow_image">
+        </section>
+    </main>
 </body>
 </html>
