Lab10 complete and project push pull

--- a/lab10/formsent.html
+++ b/lab10/formsent.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form Submitted - Jalen Banks</title>
+    <link rel="stylesheet" href="lab10.css">
 </head>
 <body>
-    <h1>Form Submitted</h1>
-    <a href="lab10.html"></a>
+    <div class="myform">
+        <h1>Form Successfully Submitted!</h1>
+        <p>Thank you for submitting your information.</p>
+        <a href="lab10.html" style="display: inline-block; padding: 10px 20px; background-color: rgb(50, 50, 50); color: aliceblue; text-decoration: none; border-radius: 5px; margin-top: 20px;">Back to Form</a>
+    </div>
 </body>
 </html>
