--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -13,29 +13,31 @@
   </button>
 
   <main class="ocean" role="main" aria-label="Map with learning islands">
+    <!-- Welcome message -->
+    <div class="welcome-message">
+      <h1>🏝️ Learning Islands 🏝️</h1>
+      <p>Click on an island to start your adventure!</p>
+    </div>
+
     <!-- Decorative tiny islands (auto-generated too) -->
     <div class="islets" aria-hidden="true"></div>
 
     <!-- Four main islands -->
     <nav class="islands" aria-label="Learning topics">
       <a class="island" href="colors.html" data-topic="colors" aria-label="Go to Colors island">
-        <span class="icon" aria-hidden="true">🟨🔵🔺</span>
-        <span class="label">Colors</span>
+        <img src="assets/color.svg" alt="Colors Island" class="island-image">
       </a>
 
       <a class="island" href="numbers.html" data-topic="numbers" aria-label="Go to Numbers island">
-        <span class="icon" aria-hidden="true">🔢</span>
-        <span class="label">Numbers</span>
+        <img src="assets/shapes.svg" alt="Numbers Island" class="island-image">
       </a>
 
       <a class="island" href="language.html" data-topic="language" aria-label="Go to Language island">
-        <span class="icon" aria-hidden="true">🌐🈴</span>
-        <span class="label">Language</span>
+        <img src="assets/languages.svg" alt="Language Island" class="island-image">
       </a>
 
       <a class="island" href="animals.html" data-topic="animals" aria-label="Go to Animals island">
-        <span class="icon" aria-hidden="true">🦁🐘🦒</span>
-        <span class="label">Animals</span>
+        <img src="assets/animals.svg" alt="Animals Island" class="island-image">
       </a>
     </nav>
   </main>
