--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Islands Hub — Learn & Play</title>
-  <link rel="stylesheet" href="ocean.css"/>
+  <link rel="stylesheet" href="ocean.css" />
 </head>
+
 <body>
   <!-- Audio Toggle -->
   <button id="audioToggle" class="audio-toggle" aria-pressed="false" aria-label="Toggle beach sounds">
@@ -28,8 +30,8 @@
         <img src="assets/color.svg" alt="Colors Island" class="island-image">
       </a>
 
-      <a class="island" href="numbers.html" data-topic="numbers" aria-label="Go to Numbers island">
-        <img src="assets/shapes.svg" alt="Numbers Island" class="island-image">
+      <a class="island" href="shapes.html" data-topic="shapes" aria-label="Go to Shapes island">
+        <img src="assets/shapes.svg" alt="Shapes Island" class="island-image">
       </a>
 
       <a class="island" href="language.html" data-topic="language" aria-label="Go to Language island">
@@ -44,4 +46,5 @@
 
   <script src="script.js" defer></script>
 </body>
+
 </html>
